--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon backend/server.js",
-    "Medicine-App": "npm start --prefix Medicine-App",
-    "dev": "concurrently \"npm run server\" \"npm run Medicine-App\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix Medicine-App && npm run build --prefix Medicine-App"
+    "Frontend": "npm start --prefix Frontend",
+    "dev": "concurrently \"npm run server\" \"npm run Frontend\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix Frontend && npm run build --prefix Frontend"
   },
   "author": "media-one-group",
   "license": "ISC",
