--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-logo-alchemy",
-  "homepage": "http://test.lifoapp.co.uk/",
+  "homepage": "https://theloglalchemy.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
