--- a/Backend/.env
+++ b/Backend/.env
@@ -3,5 +3,5 @@ DB_URL =mongodb+srv://Shafay:shafay123@cluster0.o8604c8.mongodb.net/?retryWrites
 JWT_SECRET_KEY= i hate potatoes
 NODE_ENV=production
 JWT_EXPIRES= 6d
-Email = info@thelogoalchemy.com
-Password = N+}.O))9F5qJ
+Email = info@test.lifoapp.co.uk
+Password = 7IP(k!IuN^9D
