--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
+    "emotion-icons": "^3.27.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-floating-whatsapp": "^5.0.8",
+    "react-motion-float-button": "^1.0.0",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
