--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-floating-whatsapp": "^5.0.8",
+    "react-google-recaptcha": "^2.1.0",
     "react-motion-float-button": "^1.0.0",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.11.1",
