--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "media-one-group",
   "license": "ISC",
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
